--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,8 +29,13 @@
     "prettier"
   ],
   "rules": {
+    "prettier/prettier": "error",
+    "react/jsx-one-expression-per-line": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/prop-types": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
+    "no-unused-expressions": "off",
     "react/jsx-filename-extension": [
       1,
       {
@@ -48,7 +53,6 @@
         "tsx": "never"
       }
     ],
-    "prettier/prettier": "error"
   },
   "settings": {
     "import/resolver": {
