--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "env": {
-    "es6": true
+    "es6": true,
+    "browser": true
   },
   "extends": [
     "plugin:@typescript-eslint/recommended",
@@ -36,6 +37,9 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "no-unused-expressions": "off",
+    "import/no-duplicates": "off",
+    "@typescript-eslint/camelcase": "off",
+    "camelcase": "off",
     "react/jsx-filename-extension": [
       1,
       {
@@ -52,7 +56,7 @@
         "ts": "never",
         "tsx": "never"
       }
-    ],
+    ]
   },
   "settings": {
     "import/resolver": {
